# Anker

./: .gitignore  CMakeLists.txt  README.md  main.cpp  main.qml  main.qrc  qtqml.cpp  qtqml.h
include/: Anker.hpp  Card.hpp  Clipboard.hpp  MainWindow.hpp  Media_Handler.hpp
qmls/: mainWindow.qml
resources/: 12.lrc
src/: Anker.cpp  CMakeLists.txt  Card.cpp  Clipboard.cpp  MainWindow.cpp  Media_Handler.cpp
tests/: Anker_Test.cpp  CMakeLists.txt  Card_Test.cpp  Clipboard_Test.cpp  Media_Handler_Test.cpp
